# Firework

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps-lively-rock-083549b00.yml  docs.yml  pypi-publish.yml
docs/Writerside/: redirection-rules.xml  spark.tree  writerside.cfg
docs/Writerside/cfg/: buildprofiles.xml
docs/Writerside/topics/: Bootstrap.md  CLI.md  Config.md  Development.md  Firework.md  build-and-publish.md  starter-topic.md
scripts/pre-commit/: schema-update.sh
src/firework/: globals.py
src/firework/bootstrap/: __init__.py  _resolve.py  context.py  core.py  graph.py  service.py  status.py  tools.py
src/firework/cli/: core.py  hook.py  log.py  prelude.py  term.py  util.py  utils.py
src/firework/cli/base/: __init__.py  command.py  utils.py
src/firework/cli/bootstrap/: command.py  utils.py
src/firework/cli/commands/: init.py  init_template.toml  run.py  self.py  utils.py
src/firework/cli/config/: __init__.py  regenerate_cli_schema.py  schema.json
src/firework/cli/prompt/: __init__.py  base.py  checkbox.py  confirm.py  list.py  select.py  util.py
src/firework/command/core/: analyzer.py
src/firework/command/core/model/: capture.py  fragment.py  mix.py  pattern.py  receiver.py  snapshot.py
src/firework/config/: __init__.py  bi_tree.py  doc_parse.py  domain.py  format.py  manager.py  model.py  pretty.py  schema_gen.py  spec.py  storage.py  utils.py
src/firework/config/json5_backend/: __init__.py  encode.py  transform.py  types.py  wsc.py
src/firework/entrypoint/: __init__.py  anycast.py  context.py  entity.py  entrypoint.py  globals.py  implement.py  overload.py  overloads.py  record.py  selection.py  typing.py
src/firework/entrypoint/fn/: __init__.py  endpoint.py  implement.py  record.py  selection.py
src/firework/entrypoint/userspace/: anycast.py
src/firework/framework/command/: __init__.py  globals.py  metadata.py  model.py  specifiers.py  variant.py
src/firework/framework/command/core/: __init__.py  analyzer.py  debug.py  err.py
src/firework/framework/command/core/model/: __init__.py  capture.py  fragment.py  mix.py  pattern.py  receiver.py  snapshot.py
src/firework/patchwork/: __init__.py  anycast.py  context.py  entity.py  feature.py  globals.py  implement.py  overload.py  record.py  selection.py  typing.py
src/firework/util/: __init__.py  _async.py  _cvar.py  _dcls.py  _maybe.py  _resolve.py  _task_group.py  _trie.py  importlib.py
src/firework_devel/: lab.py  regenerate_cli_schema.py
tests/sistana/: asserts.py  test_analyze.py  test_capture.py  test_fragment.py  test_mix.py  test_pattern.py  test_receiver.py
zlab/: lab_bootstrap.py  lab_yanagi.py
