[project]
name = "firework-spark"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = [
    # Common
    "loguru>=0.7.2",
    "richuru>=0.1.1",
    "exceptiongroup>=1.2.2",
    "typing-extensions>=4.12.2",
    "importlib-resources>=6.4.5;python_version>='3.10' and python_version<='3.11'",
    # ---

    # Sistana = <firework.framework.command.core>
    # Credits: Elaina; Tarraint
    "elaina-segment>=0.4.0",
    "tarina>=0.6.3",
    # ---

    # Yanagi = <firework.framework.command>
    # Credits: Elaina
    # ---

    # Flywheel = <firework.entrypoint>
    # Credits: Elaina
    # ---

    # Nekobox = <firework.backend.lagrange>
    # Credits: wyapx; Tarraint; linwenxuan; Elaina, ...
    # ---

    # Kayaku = <firework.config>
    # Credits: BlueGlassBlock; Elaina
    "lark[regex]>=1.2.2",
    # ---

    # Luma = <firework.cli>
    # Credits: BlueGlassBlock, Elaina
    "importlib-metadata>=8.5.0",
    "tomlkit>=0.13.2",
    "jsonschema>=4.23.0",
    "dacite>=1.8.1",
    # ---

    # Launart = <firework.bootstrap>
    # Credits: Elaina; BlueGlassBlock; ProgramRipper; Tarraint
    # ---

    # Amnesia = <firework.framework.core>, <firework.bootstrap.external>
    # Credits: Elaina; BlueGlassBlock; ProgramRipper; Tarraint
    # ---

    # Saya = <firework.framework.modular>
    # Credits: Elaina; BlueGlassBlock; ProgramRipper; Tarraint
    # ---

    # Avilla = <firework.framework.core>
    # Credits: Elaina; BlueGlassBlock; ProgramRipper; Tarraint
    # ---
    "case-converter>=1.1.0"
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
uvicorn = ["uvicorn>=0.32.0"]
aiohttp = ["aiohttp>=3.10.10"]
richuru = ["richuru>=0.1.1"]

[project.scripts]
firework = "firework.cli.core:main"

[project.entry-points."firework.cli.plugin"]
do_self = "firework.cli.commands.self:plugin"
do_run = "firework.cli.commands.run:plugin"
do_init = "firework.cli.commands.init:plugin"

prelude = "firework.cli.prelude:plugin"

[dependency-groups]
dev = ["ruff>=0.7.2", "pytest>=8.3.3", "noneprompt>=0.1.9", "typer>=0.13.0", "git-filter-repo>=2.45.0"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/firework/**/*.py", "src/firework/**/*.json"]

[tool.pdm.scripts]
regenerate-cli-schema = {call = "firework_devel.regenerate_cli_schema:main"}
lab = {call = "firework_devel.lab:via_typer"}
cloc = {shell = "tokei src"}

[tool.ruff]
line-length = 135

[tool.ruff.lint]
extend-select = ["I001"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
